Fix dropdown overflow and text-wrap

--- a/app/src/components/MovieList.css
+++ b/app/src/components/MovieList.css
@@ -134,7 +134,7 @@
 	border: none;
 	color: #efefef;
 	padding: 6px 30px 6px 10px;
-	width: 120px;
+	width: 130px;
 	border-radius: 2px 0px 0px 2px;
 	cursor: pointer;
 }
@@ -161,6 +161,8 @@
 	border: none;
 	top: 120%;
 	border-radius: 2px;
+	max-height:unset;
+	overflow:hidden;
 }
 
 .Dropdown-option {
